# RustGL

./: .gitignore  Cargo.toml  README.md
assets/shaders/: camera.frag  camera.vert  test.frag
ecs_test/: Cargo.toml
ecs_test/src/: main.rs
src/: camera.rs  input.rs  macros.rs  main.rs  mesh.rs  model.rs  shader.rs
