[package]
name = "RustGL"
version = "0.1.0"
edition = "2021"

[dependencies]
glfw = "0.52"
gl = "0.14"
glm = "0.2.3"
cgmath = "0.16.1"
image = "0.19.0"
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"
imgui = "<0.12.0"
imgui-opengl-renderer = "0.12.1"



[workspace]
members = ["ecs_test"]


#https://github.com/bwasty/learn-opengl-rs
#https://github.com/PistonDevelopers/glfw-rs/tree/master/examples
